fix css layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 body {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1200px;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -16,6 +14,12 @@ code {
 
 * {
   border: 1px red solid;
+}
+
+.page-container {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 1rem;
 }
 
 .header-container {
